--- a/templates/index.html
+++ b/templates/index.html
@@ -322,12 +322,11 @@
                 <img class="carousel-person-image" src="{% static '/images/fintech.jpeg' %}" alt="">
                 <h4 style="color: #FFAC1B; ">Opportune </h4>
                 <h6>Building Innovative Solutions for Financial Connectivity</h6>
-                <p>As part of an incredible team at the Women in FinTech Hackathon, we learned how to 
-                  build an MVP in sprints while developing a platform that connects employers to 
-                  employees. We integrated the Mojaloop money transaction module, enabling seamless 
-                  financial transactions. Our solution also empowers entrepreneurs to showcase their
-                  products and skills, providing a bridge to the target market and promoting financial 
-                  inclusion.</p>
+                <p>At the Women in FinTech Hackathon, our team built an MVP in sprints, creating a
+                   platform to connect employers with employees. We integrated the Mojaloop module for 
+                   smooth financial transactions and designed features that help entrepreneurs showcase
+                    their products and skills, fostering financial inclusion and bridging gaps to target
+                     markets.</p>
               </div>
             </div>
           </div>
@@ -470,31 +469,48 @@
     </body>
   </section>
 
-
 <section class="brand-logo brand-logo--bg py-5">
   <div class="container">
-    <div class="brand-logo__wrapper">
-      <div class="col-7 col-sm-3 col-md-2">
+    <!-- First Row -->
+    <div class="row justify-content-center mb-4">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
         <img class="img-fluid" src="{% static 'images/djj.png' %}" alt="DJJ">
       </div>
-      <div class="col-7 col-sm-3 col-md-2">
-        <img class="img-fluid" src="{% static 'images/c.png' %}" alt="HCBJ">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/boot.png' %}" alt="HCBJ">
       </div>
-      <div class="col-7 col-sm-3 col-md-2">
-        <img class="img-fluid" src="{% static 'images/python.jpg' %}" alt="Python">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/css.png' %}" alt="CSS">
       </div>
-      <div class="col-7 col-sm-3 col-md-2">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/html.png' %}" alt="HTML">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/js.png' %}" alt="JS">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/python.png' %}" alt="Python">
+      </div>
+    </div>
+
+    <!-- Second Row -->
+    <div style="padding-left: 400px; padding-top: 50px;"   class="row justify-content-center">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
         <img class="img-fluid" src="{% static 'images/jupyter.png' %}" alt="Jupyter">
       </div>
-      <div class="col-7 col-sm-3 col-md-2">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
         <img class="img-fluid" src="{% static 'images/figma.png' %}" alt="Figma">
       </div>
-      <div class="col-7 col-sm-3 col-md-2">
-        <img class="img-fluid" src="{% static 'images/visio.jpg' %}" alt="Figma">
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/visio.png' %}" alt="Visio">
       </div>
     </div>
   </div>
 </section>
+
+
+
+
 
 
   <section  id="tech-groups" class="blog">
