--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -108,7 +108,7 @@ html,body {
 
 
 .header--bg{
-  background: url("/static/images/c (1).jpg") no-repeat;
+  background: url("/static/images/icons.jpg") no-repeat;
   
   background-size: cover;
   background-position: center;
@@ -387,7 +387,7 @@ letter-spacing: 1px;
 }
 
 .button:hover{
- color: purple;
+ color: #FF8C00;
 }
 
 .button--colorful{
