--- a/templates/index.html
+++ b/templates/index.html
@@ -469,9 +469,9 @@
     </body>
   </section>
 
-<section class="brand-logo brand-logo--bg py-5">
+<!-- <section class="brand-logo brand-logo--bg py-5">
   <div class="container">
-    <!-- First Row -->
+   
     <div class="row justify-content-center mb-4">
       <div class="col-6 col-sm-4 col-md-2 mb-3">
         <img class="img-fluid" src="{% static 'images/djj.png' %}" alt="DJJ">
@@ -493,7 +493,7 @@
       </div>
     </div>
 
-    <!-- Second Row -->
+ 
     <div style="padding-left: 400px; padding-top: 50px;"   class="row justify-content-center">
       <div class="col-6 col-sm-4 col-md-2 mb-3">
         <img class="img-fluid" src="{% static 'images/jupyter.png' %}" alt="Jupyter">
@@ -508,7 +508,43 @@
   </div>
 </section>
 
+ -->
 
+ <!-- ....................... -->
+ <section class="brand-logo brand-logo--bg py-5">
+  <div class="container">
+    <div class="row justify-content-center mb-4">
+      <!-- Logos Row -->
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/djj.png' %}" alt="DJJ">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/boot.png' %}" alt="HCBJ">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/css.png' %}" alt="CSS">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/html.png' %}" alt="HTML">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/js.png' %}" alt="JS">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/python.png' %}" alt="Python">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/jupyter.png' %}" alt="Jupyter">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/figma.png' %}" alt="Figma">
+      </div>
+      <div class="col-6 col-sm-4 col-md-2 mb-3">
+        <img class="img-fluid" src="{% static 'images/visio.png' %}" alt="Visio">
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
